--- a/style.css
+++ b/style.css
@@ -1,42 +1,45 @@
 html{
   color-scheme:light, dark;
 }
-        /* Add some CSS to control the size and appearance of the iframe */
-        iframe {
-            width: 20rem;
-            height: 20rem; /* Adjust the height as needed */
-            border: none; /* Remove the iframe border */
-            background-color: #f5f5f5; /* Set the background color */
-            color: #333; /* Set the text color */
-            font-family:Courier, Arial, sans-serif; /* Set the font family */
-            font-size: 14px; /* Set the font size */
-            line-height: 1.4; /* Set the line height */
-            padding: 10px; /* Add some padding */
-            overflow: auto; /* Enable scrolling within the iframe */
-        }
-  .list {
-    list-style-type: none;
-    margin-bottom: 20px;
-    padding: 3ch;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
 }
 
-.list li {
+h1 {
+    text-align: center;
+    padding: 20px;
+    background-color: #333;
+    color: #fff;
+    margin-top: 0;
+}
+
+ul.list {
+    list-style-type: none;
+    padding: 0;
+    margin: 20px;
+}
+
+ul.list li {
     margin-bottom: 10px;
 }
 
-.list li a {
+ul.list li a {
+    display: block;
+    padding: 10px;
+    background-color: #fff;
+    color: #333;
     text-decoration: none;
-    color: #000;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
-.list li a:hover {
-    text-decoration: underline;
+ul.list li a:hover {
+    background-color: #f2f2f2;
 }
 
-        /* Style the links */
-        a {
-            display: inline-block;
-            margin-right: 10px;
-            color: blue;
-            text-decoration: none;
-        }
+iframe#textFileFrame {
+    width: 100%;
+    height: 400px;
+    border: none;
+}
