--- a/style.css
+++ b/style.css
@@ -43,3 +43,80 @@ iframe#textFileFrame {
     height: 400px;
     border: none;
 }
+html{
+
+  color-scheme:light, dark;
+
+}
+
+body {
+
+    font-family: Arial, sans-serif;
+
+    background-color: #f2f2f2;
+
+}
+
+h1 {
+
+    text-align: center;
+
+    padding: 20px;
+
+    background-color: #333;
+
+    color: #fff;
+
+    margin-top: 0;
+
+}
+
+ul.list {
+
+    list-style-type: none;
+
+    padding: 0;
+
+    margin: 20px;
+
+}
+
+ul.list li {
+
+    margin-bottom: 10px;
+
+}
+
+ul.list li a {
+
+    display: block;
+
+    padding: 10px;
+
+    background-color: #fff;
+
+    color: #333;
+
+    text-decoration: none;
+
+    border: 1px solid #ccc;
+
+    border-radius: 5px;
+
+}
+
+ul.list li a:hover {
+
+    background-color: #f2f2f2;
+
+}
+
+iframe#textFileFrame {
+
+    width: 100%;
+
+    height: 400px;
+
+    border: none;
+
+}
